--- a/src/main/resources/templates/book/book_detail.html
+++ b/src/main/resources/templates/book/book_detail.html
@@ -1,2 +1,5 @@
 <h1>책제목</h1>
+<h1 text="${book.subject}"></h1>
+<div text="${book.content}"></div>
+<a href="http://localhost:8010/book/list">리스트로 이동</a>
 
