--- a/src/main/resources/templates/book/book_list.html
+++ b/src/main/resources/templates/book/book_list.html
@@ -3,6 +3,7 @@
     <tr>
         <th>번호</th>
         <th>제목</th>
+        <th>이미지</th> <!-- 새로운 열 추가 -->
         <th>작성일시</th>
     </tr>
     </thead>
@@ -12,8 +13,6 @@
         <td>
             <a th:href="@{|/book/detail/${book.id}|}" th:text="${book.subject}"></a>
         </td>
-        <td th:text="${#temporals.format(book.createDate, 'yyyy-MM-dd HH:mm')}"></td>
     </tr>
     </tbody>
 </table>
-<a th:href="@{/book/create}" class="btn btn-primary">도서 등록하기</a>
