--- a/src/main/resources/templates/orders/ordersPay.html
+++ b/src/main/resources/templates/orders/ordersPay.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
 <head>
     <title>EatBook</title>
@@ -8,14 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/css/member/findUsernameForm.css">
-    <!-- script
-    ================================================== -->
-    <script src="/js/member/confirmCodeForm.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/orders/ordersPay.css">
+    <script src="/js/orders/ordersPay.js"></script>
 </head>
 <body class="d-flex align-items-center py-4 bg-body-tertiary">
-<main class="form-findUser w-100 m-auto">
-    <form th:action="@{/member/confirmCodeUsername}" th:object="${confirmCodeForm}" method="post">
+<main class="form-register w-100 m-auto">
+    <form th:action="@{/member/pay}"  method="post">
         <a th:href="@{/}">
             <svg width="250" height="60" xmlns="http://www.w3.org/2000/svg" version="1.0"
                  preserveAspectRatio="xMidYMid meet">
@@ -42,19 +40,13 @@
                 </g>
             </svg>
         </a>
-        <h1 class="h3 mb-3 fw-normal">아이디 찾기</h1>
-        <h2 class="h6 mb-3 fw-normal">코드를 입력하고 확인 버튼을 누르면 이메일로 아이디가 전송됩니다.</h2>
-        <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
-            <div th:each="err : ${#fields.allErrors()}" th:text="${err}"/>
-        </div>
-        <div class="form-floating">
-            <input type="password" id="confirmCode" name="confirmCode" class="form-control">
-            <label for="confirmCode" class="floatingPassword">코드</label>
-        </div>
-
-        <button type="submit" class="btn btn-primary w-100 py-2">코드 확인</button>
+        <h1 class="h3 mb-3 fw-normal">주문/결제(임시)</h1>
+<!--        <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">-->
+<!--            <div th:each="err : ${#fields.allErrors()}" th:text="${err}"/>-->
+<!--        </div>-->
+        <button type="button" class="btn btn-primary w-100 py-2" onclick="pclose1()">홈페이지</button>
     </form>
-    <br/>
 </main>
 </body>
 </html>
+
