--- a/src/main/resources/templates/rebate/rebate_seller.html
+++ b/src/main/resources/templates/rebate/rebate_seller.html
@@ -12,9 +12,10 @@
                 <thead>
                 <tr>
                     <th scope="col">책</th>
-                    <th>닉네임</th>
+                    <th>판매가</th>
+                    <th>판매 부수</th>
+                    <th>수수료</th>
                     <th>정산 금액</th>
-                    <th></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -22,8 +23,16 @@
                     <th scope="row"></th>
                     <td></td>
                 </tr>
+                <tr>
+                    <th scope="row">합계</th>
+                    <td>판매 합계 금액</td>
+                    <td>판매 부수 합계</td>
+                    <td>수수료</td>
+                    <td>정산 금액 총액</td>
+                </tr>
                 </tbody>
             </table>
+
         </div>
     </div>
 </div>
