--- a/src/main/resources/templates/rebate/rebate_admin.html
+++ b/src/main/resources/templates/rebate/rebate_admin.html
@@ -13,14 +13,23 @@
                 <tr>
                     <th scope="col">아이디</th>
                     <th>닉네임</th>
-                    <th>정산 금액</th>
-                    <th></th>
+                    <th>판매자 정산 금액</th>
+                    <th>관리자 정산 금액</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr >
-                    <th scope="row"></th>
+                <tr th:each="member : ${sellerList}">
+                    <th scope="row">[[${member.username}]]</th>
+                    <td >[[${member.nickname}]] </td>
                     <td></td>
+                    <td>[[${rebate.totalFee}]] %</td>
+                    <td> 원</td>
+                </tr>
+                <tr>
+                    <th scope="row">합계</th>
+                    <td>/  /</td>
+                    <td>판매자 정산 금액 합계</td>
+                    <td>관리자 정산 금액 합계</td>
                 </tr>
                 </tbody>
             </table>
