--- a/src/main/resources/templates/rebate/rebate_admin.html
+++ b/src/main/resources/templates/rebate/rebate_admin.html
@@ -18,13 +18,13 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="member : ${sellerList}">
-                    <th scope="row">[[${member.username}]]</th>
-                    <td >[[${member.nickname}]] </td>
-                    <td></td>
-                    <td>[[${rebate.totalFee}]] %</td>
-                    <td> 원</td>
-                </tr>
+<!--                <tr th:each="member : ${sellerList}">-->
+<!--                    <th scope="row">[[${member.username}]]</th>-->
+<!--                    <td >[[${member.nickname}]] </td>-->
+<!--                    <td></td>-->
+<!--                    <td>[[${rebate.totalFee}]] %</td>-->
+<!--                    <td> 원</td>-->
+<!--                </tr>-->
                 <tr>
                     <th scope="row">합계</th>
                     <td>/  /</td>
