--- a/src/main/resources/templates/rebate/rebate_seller.html
+++ b/src/main/resources/templates/rebate/rebate_seller.html
@@ -19,20 +19,20 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="book : ${bookList}">
-                    <th scope="row">[[${book.title}]]</th>
-                    <td th:text="${book.price * book.discount}"> 원</td>
-                    <td>[[${book.sellCount}]] 부</td>
-                    <td>[[${rebate.totalFee}]] %</td>
-                    <td th:text="${book.price * book.discount * rebate.totalFee}"> 원</td>
-                </tr>
-                <tr>
-                    <th scope="row">합계</th>
-                    <td>판매 금액 합계</td>
-                    <td>판매 부수 합계</td>
-                    <td>[[${rebate.totalFee}]] %</td>
-                    <td>정산 금액 총액</td>
-                </tr>
+<!--                <tr th:each="book : ${bookList}">-->
+<!--                    <th scope="row">[[${book.title}]]</th>-->
+<!--                    <td th:text="${book.price * book.discount}"> 원</td>-->
+<!--                    <td>[[${book.sellCount}]] 부</td>-->
+<!--                    <td>[[${rebate.totalFee}]] %</td>-->
+<!--                    <td th:text="${book.price * book.discount * rebate.totalFee}"> 원</td>-->
+<!--                </tr>-->
+<!--                <tr>-->
+<!--                    <th scope="row">합계</th>-->
+<!--                    <td>판매 금액 합계</td>-->
+<!--                    <td>판매 부수 합계</td>-->
+<!--                    <td>[[${rebate.totalFee}]] %</td>-->
+<!--                    <td>정산 금액 총액</td>-->
+<!--                </tr>-->
                 </tbody>
             </table>
 
