--- a/src/main/resources/templates/apply/applyList.html
+++ b/src/main/resources/templates/apply/applyList.html
@@ -8,7 +8,7 @@
             <h2>판매자 신청 리스트</h2>
         </div>
         <div class="body-box">
-            <table class="table">
+            <table class="table table-hover">
                 <thead>
                 <tr>
                     <th scope="col">아이디</th>
@@ -19,7 +19,7 @@
                     <th scope="col">거절</th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody class="table-group-divider">
                 <tr th:if="${apply.isApprove == false}" th:each="apply : ${applyList}">
                     <th scope="row">[[${apply.applicant.username}]]</th>
                     <td>[[${apply.applicant.nickname}]]</td>
