--- a/src/main/resources/templates/rebate/rebate_admin.html
+++ b/src/main/resources/templates/rebate/rebate_admin.html
@@ -8,7 +8,7 @@
             <h2>관리자 정산 페이지</h2>
         </div>
         <div class="body-box">
-            <table class="table">
+            <table class="table table-hover">
                 <thead>
                 <tr>
                     <th scope="col">아이디</th>
@@ -17,7 +17,7 @@
                     <th>관리자 정산 금액</th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody class="table-group-divider">
 <!--                <tr th:each="member : ${sellerList}">-->
 <!--                    <th scope="row">[[${member.username}]]</th>-->
 <!--                    <td >[[${member.nickname}]] </td>-->
