--- a/src/main/resources/templates/rebate/rebate_seller.html
+++ b/src/main/resources/templates/rebate/rebate_seller.html
@@ -8,7 +8,7 @@
             <h2>판매자 정산 페이지</h2>
         </div>
         <div class="body-box">
-            <table class="table">
+            <table class="table table-hover">
                 <thead>
                 <tr>
                     <th scope="col">책</th>
@@ -18,7 +18,7 @@
                     <th>정산 금액</th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody class="table-group-divider">
 <!--                <tr th:each="book : ${bookList}">-->
 <!--                    <th scope="row">[[${book.title}]]</th>-->
 <!--                    <td th:text="${book.price * book.discount}"> 원</td>-->
