--- a/src/main/resources/templates/apply/applyGuide.html
+++ b/src/main/resources/templates/apply/applyGuide.html
@@ -1,17 +1,5 @@
-<!doctype html>
-<html lang="ko">
-<head>
-    <title>EatBook</title>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/css/apply/applySellerForm.css">
-</head>
-<body class="d-flex align-items-center py-4 bg-body-tertiary">
-<main class="form-register w-100 m-auto">
+<html layout:decorate="~{memberLayout}">
+<div layout:fragment="content">
     <a th:href="@{/}">
         <svg width="250" height="60" xmlns="http://www.w3.org/2000/svg" version="1.0"
              preserveAspectRatio="xMidYMid meet">
@@ -42,7 +30,6 @@
     <h4>판매자 신청 결과는 관리자 심사 후 이메일로 메일 발송됩니다.</h4>
     <h4>감사합니다.</h4>
     <a th:href="@{/}" class="btn btn-primary">메인으로</a>
-</main>
-</body>
+</div>>
 </html>
 
