mailSend_alert_fixed

--- a/src/main/resources/templates/memberLayout.html
+++ b/src/main/resources/templates/memberLayout.html
@@ -11,6 +11,10 @@
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- memberCSS   -->
     <link rel="stylesheet" type="text/css" href="/css/member/memberLayout.css">
+    <!-- mailAlert.js   -->
+    <script src="/js/member/sendmail.js"></script>
+    <!-- SweelAlert2   -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
     <body class="d-flex align-items-center py-4 bg-body-tertiary">
     <main class="form-member w-100 m-auto">
