--- a/src/main/resources/templates/member/findPasswordForm.html
+++ b/src/main/resources/templates/member/findPasswordForm.html
@@ -14,7 +14,7 @@
             <label for="email" class="floatingInput">회원 가입시 작성한 이메일 입력</label>
         </div>
 
-        <button type="submit" class="btn btn-primary w-100 py-2">코드 발송</button>
+        <button type="submit" class="btn btn-primary w-100 py-2" onclick="alertMail()">코드 발송</button>
     </form>
     <br/>
 </html>
