--- a/src/main/resources/templates/member/findUsernameForm.html
+++ b/src/main/resources/templates/member/findUsernameForm.html
@@ -10,7 +10,7 @@
             <label for="email" class="floatingInput">이메일</label>
         </div>
 
-        <button type="submit" class="btn btn-primary w-100 py-2">코드 발송</button>
+        <button type="submit" class="btn btn-primary w-100 py-2" onclick="alertMail()">코드 발송</button>
     </form>
     <br/>
 </html>
