--- a/src/main/resources/templates/book/book_create_form.html
+++ b/src/main/resources/templates/book/book_create_form.html
@@ -8,19 +8,12 @@
     </style>
 </head>
 <body>
-<form id="bookForm" th:action="@{/book/create}" th:object="${bookForm}" method="post" enctype="multipart/form-data">
-    <div class="mb-3">
-        <label for="category" class="form-label">카테고리</label>
-        <select th:field="*{category}" class="form-control" id="category" onchange="changeCategory()">
-            <option value="1">베스트셀러</option>
-            <option value="2">외국도서</option>
-            <option value="3">국내도서</option>
-            <option value="4">무료도서</option>
-            <option value="5">신간도서</option>
-        </select>
-        <span th:if="${#fields.hasErrors('category')}" th:errors="*{category}" class="text-danger"></span>
-    </div>
-
+<form  th:action="@{/book/create}" th:object="${bookForm}" method="post" enctype="multipart/form-data">
+    <!-- 게시글 모달 버튼 -->
+    <button class="btn btn-sm btn-outline-secondary" data-bs-target="#reportArticleModal"
+            data-bs-toggle="modal" sec:authorize="isAuthenticated()"
+            type="button">카테고리
+    </button>
     <div class="mb-3">
         <label for="subject" class="form-label">제목</label>
         <input type="text" th:field="*{subject}" class="form-control">
@@ -58,45 +51,69 @@
         <!-- 이미지 미리보기 -->
         <img id="preview" src="#" alt="미리보기" style="max-width: 200px; max-height: 200px; display: none;">
     </div>
-    <input type="submit" value="저장하기" id="saveButton" class="btn btn-primary my-2">
+    <input type="submit" value="저장하기"  class="btn btn-primary my-2">
 </form>
+<!-- 게시글 모달 부트스트랩 시작 -->
+<div aria-hidden="true" aria-labelledby="reportModalArticle" class="modal fade" id="reportArticleModal"
+     tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="reportModalArticle">카테고리 선택</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form class="was-validated" method="post" th:action="@{/book/category}">
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label class="col-form-label" for="validationTextareaArticle">내용</label>
+                        <textarea class="form-control" id="validationTextareaArticle" name="reportContent"
+                                  placeholder="내용을 입력해주세요." required></textarea>
+                    </div>
 
+                    <!-- 라디오 버튼에 이벤트 리스너 추가 -->
+                    <div class="form-check">
+                        <input class="form-check-input" id="flexRadioDefault1" name="reportType"
+                               onchange="handleRadioSelection()"
+                               type="radio" value="베스트셀러">
+                        <label class="form-check-label" for="flexRadioDefault1">베스트셀러</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" id="flexRadioDefault2" name="reportType"
+                               onchange="handleRadioSelection()"
+                               type="radio" value="외국도서">
+                        <label class="form-check-label" for="flexRadioDefault2">외국도서</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" id="flexRadioDefault3" name="reportType"
+                               onchange="handleRadioSelection()"
+                               type="radio" value="국내도서">
+                        <label class="form-check-label" for="flexRadioDefault3">국내도서</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" id="flexRadioDefault4" name="reportType"
+                               onchange="handleRadioSelection()"
+                               type="radio" value="무료도서">
+                        <label class="form-check-label" for="flexRadioDefault4">무료도서</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" id="flexRadioDefault5" name="reportType"
+                               onchange="handleRadioSelection()"
+                               type="radio" value="신간도서">
+                        <label class="form-check-label" for="flexRadioDefault5">신간도서</label>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">Close</button>
+                        <button class="btn btn-primary" onclick="handleRadioSelection()" type="submit">카테고리 저장
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 <script>
-    // 카테고리 선택 폼이 변경될 때마다 호출되는 함수
-    function changeCategory() {
-        // 선택한 카테고리 값 가져오기
-        var selectedCategory = document.getElementById("category").value;
-        document.getElementById("bookForm").action = getCategoryActionUrl(categoryValue);
-        // 이미지 미리보기를 보여줄 img 요소 선택
-        var previewImg = document.getElementById("preview");
 
-        // 선택한 카테고리에 따라 이미지 URL 설정하여 미리보기 창에 표시
-        function getCategoryActionUrl(categoryValue) {
-        switch (categoryValue) {
-            case "1":
-                previewImg.src = "http://localhost:8010/category/list#homeTabBest"; // 베스트셀러에 해당하는 이미지 URL
-                break;
-            case "2":
-                previewImg.src = "http://localhost:8010/category/list#homeTabForeign"; // 외국도서에 해당하는 이미지 URL
-                break;
-            case "3":
-                previewImg.src = "http://localhost:8010/category/list#homeTabKorea"; // 국내도서에 해당하는 이미지 URL
-                break;
-            case "4":
-                previewImg.src = "http://localhost:8010/category/list#homeTabFree"; // 무료도서에 해당하는 이미지 URL
-                break;
-            case "5":
-                previewImg.src = "http://localhost:8010/category/list#homeTabNew"; // 신간도서에 해당하는 이미지 URL
-                break;
-       default:
-              // 기본값으로 설정할 이미지 URL (선택 사항)
-                previewImg.src = "기본 이미지 URL";
-                break;
-        }
-}
-        // 이미지 미리보기 보이기
-        previewImg.style.display = "block";
-    }
 </script>
 </body>
 </html>
