--- a/src/main/resources/static/css/main/layout.css
+++ b/src/main/resources/static/css/main/layout.css
@@ -1021,6 +1021,7 @@ aside {
     flex-grow: 1;
     height: 100%;
     padding-right: 10px;
+    padding-top : 80px;
 }
 .aside_items {
    position:sticky;
