--- a/src/main/resources/templates/mainhome.html
+++ b/src/main/resources/templates/mainhome.html
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <link rel="stylesheet" type="text/css" href="/css/main/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/main/vendor.css">
-    <link rel="stylesheet" type="text/css" href="/css/main/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/main/mainhome.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,6 @@
           rel="stylesheet">
     <!-- script
     ================================================== -->
-    <script src="/js/main/modermizr.js"></script>
     <script src="/js/kakaoButton.js"></script>
 </head>
 <body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
@@ -104,15 +103,7 @@
                     <use xlink:href="#search"></use>
                 </svg>
             </button>
-        <form role="search" method="get" class="search-form" onsubmit="searchBooks(); return false;">
-            <input type="search" id="search-form" class="search-field" placeholder="검색어를 입력하세요" value="" name="s" />
-            <button type="submit" class="search-submit"><svg class="search"><use xlink:href="#search"></use></svg></button>
         </form>
-
-        <div id="search-results">
-            <!-- 검색 결과를 여기에 출력할 예정 -->
-        </div>
-
         <h5 class="cat-list-title">카테고리 찾아보기</h5>
 
         <ul class="cat-list">
@@ -1050,32 +1041,6 @@
     </div>
 </div>
 <script>
-    function searchBooks() {
-        // 검색어 입력란에서 검색어 가져오기
-        var query = document.getElementById("search-form").value;
-
-        // 알라딘 API 호출
-        var apiUrl = "/search-books?s=" + encodeURIComponent(query);
-
-        // AJAX를 사용하여 API 호출
-        var xhr = new XMLHttpRequest();
-        xhr.onreadystatechange = function() {
-            if (xhr.readyState === 4 && xhr.status === 200) {
-                // 결과를 받아서 출력
-                displayResults(xhr.responseText);
-            }
-        };
-        xhr.open("GET", apiUrl, true);
-        xhr.send();
-    }
-
-    function displayResults(results) {
-        // 결과를 처리하여 화면에 출력
-        var searchResultsDiv = document.getElementById("search-results");
-        searchResultsDiv.innerHTML = results;
-    }
-</script>
-<script>
     function redirectToBestCategory() {
         // 이미지 클릭 시 원하는 카테고리 페이지로 이동
         window.location.href = 'http://localhost:8010/category/list#homeTabBest';
@@ -1084,7 +1049,6 @@
 <script src="/js/main/jquery-1.11.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 <script type="text/javascript" src="/js/main/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="/js/main/plugins.js"></script>
 <script type="text/javascript" src="/js/main/script.js"></script>
 </body>
 </html>
