--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -1,153 +1,119 @@
-<html layout:decorate="~{layout}">
-<div layout:fragment="content">
-<div class="modal modal-sheet position-static d-block bg-body-secondary p-4 py-md-5" tabindex="-1" role="dialog" id="modalTour">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content rounded-4 shadow">
-            <div class="modal-body p-5">
-                <h2 class="fw-bold mb-0">What's new</h2>
+<div th:replace="~{navbar :: navbarFragment}">
+    <div class="modal modal-sheet position-static d-block bg-body-secondary p-4 py-md-5" tabindex="-1" role="dialog"
+         id="modalTour">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content rounded-4 shadow">
+                <div class="modal-body p-5">
+                    <h2 class="fw-bold mb-0">What's new</h2>
 
-                <ul class="d-grid gap-4 my-5 list-unstyled small">
-                    <li class="d-flex gap-4">
-                        <svg class="bi text-body-secondary flex-shrink-0" width="48" height="48"><use xlink:href="#grid-fill"/></svg>
-                        <div>
-                            <h5 class="mb-0">Grid view</h5>
-                            Not into lists? Try the new grid view.
-                        </div>
-                    </li>
-                    <li class="d-flex gap-4">
-                        <svg class="bi text-warning flex-shrink-0" width="48" height="48"><use xlink:href="#bookmark-star"/></svg>
-                        <div>
-                            <h5 class="mb-0">Bookmarks</h5>
-                            Save items you love for easy access later.
-                        </div>
-                    </li>
-                    <li class="d-flex gap-4">
-                        <svg class="bi text-primary flex-shrink-0" width="48" height="48"><use xlink:href="#film"/></svg>
-                        <div>
-                            <h5 class="mb-0">Video embeds</h5>
-                            Share videos wherever you go.
-                        </div>
-                    </li>
-                </ul>
-                <button type="button" class="btn btn-lg btn-primary mt-5 w-100" data-bs-dismiss="modal">Great, thanks!</button>
+                    <ul class="d-grid gap-4 my-5 list-unstyled small">
+                        <li class="d-flex gap-4">
+                            <svg class="bi text-body-secondary flex-shrink-0" width="48" height="48">
+                                <use xlink:href="#grid-fill"/>
+                            </svg>
+                            <div>
+                                <h5 class="mb-0">Grid view</h5>
+                                Not into lists? Try the new grid view.
+                            </div>
+                        </li>
+                        <li class="d-flex gap-4">
+                            <svg class="bi text-warning flex-shrink-0" width="48" height="48">
+                                <use xlink:href="#bookmark-star"/>
+                            </svg>
+                            <div>
+                                <h5 class="mb-0">Bookmarks</h5>
+                                Save items you love for easy access later.
+                            </div>
+                        </li>
+                        <li class="d-flex gap-4">
+                            <svg class="bi text-primary flex-shrink-0" width="48" height="48">
+                                <use xlink:href="#film"/>
+                            </svg>
+                            <div>
+                                <h5 class="mb-0">Video embeds</h5>
+                                Share videos wherever you go.
+                            </div>
+                        </li>
+                    </ul>
+                    <button type="button" class="btn btn-lg btn-primary mt-5 w-100" data-bs-dismiss="modal">Great,
+                        thanks!
+                    </button>
+                </div>
             </div>
         </div>
     </div>
+    <!--    <main class="container">-->
+    <!--        <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm">-->
+    <!--            <img class="me-3" src="../assets/brand/bootstrap-logo-white.svg" alt="" width="48" height="38">-->
+    <!--            <div class="lh-1">-->
+    <!--                <h1 class="h6 mb-0 text-white lh-1">Bootstrap</h1>-->
+    <!--                <small>Since 2011</small>-->
+    <!--            </div>-->
+    <!--        </div>-->
+
+    <!--        <div class="my-3 p-3 bg-body rounded shadow-sm">-->
+    <!--            <h6 class="border-bottom pb-2 mb-0">Recent updates</h6>-->
+    <!--            <div class="d-flex text-body-secondary pt-3">-->
+    <!--                <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>-->
+    <!--                <p class="pb-3 mb-0 small lh-sm border-bottom">-->
+    <!--                    <strong class="d-block text-gray-dark">@username</strong>-->
+    <!--                    Some representative placeholder content, with some information about this user. Imagine this being some sort of status update, perhaps?-->
+    <!--                </p>-->
+    <!--            </div>-->
+    <!--            <div class="d-flex text-body-secondary pt-3">-->
+    <!--                <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#e83e8c"/><text x="50%" y="50%" fill="#e83e8c" dy=".3em">32x32</text></svg>-->
+    <!--                <p class="pb-3 mb-0 small lh-sm border-bottom">-->
+    <!--                    <strong class="d-block text-gray-dark">@username</strong>-->
+    <!--                    Some more representative placeholder content, related to this other user. Another status update, perhaps.-->
+    <!--                </p>-->
+    <!--            </div>-->
+    <!--            <div class="d-flex text-body-secondary pt-3">-->
+    <!--                <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#6f42c1"/><text x="50%" y="50%" fill="#6f42c1" dy=".3em">32x32</text></svg>-->
+    <!--                <p class="pb-3 mb-0 small lh-sm border-bottom">-->
+    <!--                    <strong class="d-block text-gray-dark">@username</strong>-->
+    <!--                    This user also gets some representative placeholder content. Maybe they did something interesting, and you really want to highlight this in the recent updates.-->
+    <!--                </p>-->
+    <!--            </div>-->
+    <!--            <small class="d-block text-end mt-3">-->
+    <!--                <a href="#">All updates</a>-->
+    <!--            </small>-->
+    <!--        </div>-->
+
+    <!--        <div class="my-3 p-3 bg-body rounded shadow-sm">-->
+    <!--            <h6 class="border-bottom pb-2 mb-0">Suggestions</h6>-->
+    <!--            <div class="d-flex text-body-secondary pt-3">-->
+    <!--                <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>-->
+    <!--                <div class="pb-3 mb-0 small lh-sm border-bottom w-100">-->
+    <!--                    <div class="d-flex justify-content-between">-->
+    <!--                        <strong class="text-gray-dark">Full Name</strong>-->
+    <!--                        <a href="#">Follow</a>-->
+    <!--                    </div>-->
+    <!--                    <span class="d-block">@username</span>-->
+    <!--                </div>-->
+    <!--            </div>-->
+    <!--            <div class="d-flex text-body-secondary pt-3">-->
+    <!--                <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>-->
+    <!--                <div class="pb-3 mb-0 small lh-sm border-bottom w-100">-->
+    <!--                    <div class="d-flex justify-content-between">-->
+    <!--                        <strong class="text-gray-dark">Full Name</strong>-->
+    <!--                        <a href="#">Follow</a>-->
+    <!--                    </div>-->
+    <!--                    <span class="d-block">@username</span>-->
+    <!--                </div>-->
+    <!--            </div>-->
+    <!--            <div class="d-flex text-body-secondary pt-3">-->
+    <!--                <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>-->
+    <!--                <div class="pb-3 mb-0 small lh-sm border-bottom w-100">-->
+    <!--                    <div class="d-flex justify-content-between">-->
+    <!--                        <strong class="text-gray-dark">Full Name</strong>-->
+    <!--                        <a href="#">Follow</a>-->
+    <!--                    </div>-->
+    <!--                    <span class="d-block">@username</span>-->
+    <!--                </div>-->
+    <!--            </div>-->
+    <!--            <small class="d-block text-end mt-3">-->
+    <!--                <a href="#">All suggestions</a>-->
+    <!--            </small>-->
+    <!--        </div>-->
+    <!--    </main>-->
 </div>
-    <main class="container">
-        <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm">
-            <img class="me-3" src="../assets/brand/bootstrap-logo-white.svg" alt="" width="48" height="38">
-            <div class="lh-1">
-                <h1 class="h6 mb-0 text-white lh-1">Bootstrap</h1>
-                <small>Since 2011</small>
-            </div>
-        </div>
-
-        <div class="my-3 p-3 bg-body rounded shadow-sm">
-            <h6 class="border-bottom pb-2 mb-0">Recent updates</h6>
-            <div class="d-flex text-body-secondary pt-3">
-                <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
-                <p class="pb-3 mb-0 small lh-sm border-bottom">
-                    <strong class="d-block text-gray-dark">@username</strong>
-                    Some representative placeholder content, with some information about this user. Imagine this being some sort of status update, perhaps?
-                </p>
-            </div>
-            <div class="d-flex text-body-secondary pt-3">
-                <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#e83e8c"/><text x="50%" y="50%" fill="#e83e8c" dy=".3em">32x32</text></svg>
-                <p class="pb-3 mb-0 small lh-sm border-bottom">
-                    <strong class="d-block text-gray-dark">@username</strong>
-                    Some more representative placeholder content, related to this other user. Another status update, perhaps.
-                </p>
-            </div>
-            <div class="d-flex text-body-secondary pt-3">
-                <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#6f42c1"/><text x="50%" y="50%" fill="#6f42c1" dy=".3em">32x32</text></svg>
-                <p class="pb-3 mb-0 small lh-sm border-bottom">
-                    <strong class="d-block text-gray-dark">@username</strong>
-                    This user also gets some representative placeholder content. Maybe they did something interesting, and you really want to highlight this in the recent updates.
-                </p>
-            </div>
-            <small class="d-block text-end mt-3">
-                <a href="#">All updates</a>
-            </small>
-        </div>
-
-        <div class="my-3 p-3 bg-body rounded shadow-sm">
-            <h6 class="border-bottom pb-2 mb-0">Suggestions</h6>
-            <div class="d-flex text-body-secondary pt-3">
-                <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
-                <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
-                    <div class="d-flex justify-content-between">
-                        <strong class="text-gray-dark">Full Name</strong>
-                        <a href="#">Follow</a>
-                    </div>
-                    <span class="d-block">@username</span>
-                </div>
-            </div>
-            <div class="d-flex text-body-secondary pt-3">
-                <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
-                <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
-                    <div class="d-flex justify-content-between">
-                        <strong class="text-gray-dark">Full Name</strong>
-                        <a href="#">Follow</a>
-                    </div>
-                    <span class="d-block">@username</span>
-                </div>
-            </div>
-            <div class="d-flex text-body-secondary pt-3">
-                <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
-                <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
-                    <div class="d-flex justify-content-between">
-                        <strong class="text-gray-dark">Full Name</strong>
-                        <a href="#">Follow</a>
-                    </div>
-                    <span class="d-block">@username</span>
-                </div>
-            </div>
-            <small class="d-block text-end mt-3">
-                <a href="#">All suggestions</a>
-            </small>
-        </div>
-    </main>
-<!--<label for="checkbox">-->
-<!--    <input type="checkbox" id="checkbox" hidden>-->
-<!--    <svg t="1689815540548" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2271"><path d="M742.4 101.12A249.6 249.6 0 0 0 512 256a249.6 249.6 0 0 0-230.72-154.88C143.68 101.12 32 238.4 32 376.32c0 301.44 416 546.56 480 546.56s480-245.12 480-546.56c0-137.92-111.68-275.2-249.6-275.2z" fill="#231F20" p-id="2272" id="heart"></path></svg>-->
-<!--    <span></span>-->
-<!--</label>-->
-
-<!--<form role="search" method="get" class="search-form" onsubmit="searchBooks(); return false;">-->
-<!--    <input type="search" id="search-form" class="search-field" placeholder="검색어를 입력하세요" value="" name="s" />-->
-<!--    <button type="submit" class="search-submit"><svg class="search"><use xlink:href="#search"></use></svg></button>-->
-<!--</form>-->
-
-<!--<div id="search-results">-->
-<!--    &lt;!&ndash; 검색 결과를 여기에 출력할 예정 &ndash;&gt;-->
-<!--</div>-->
-
-<script>
-    function searchBooks() {
-        // 검색어 입력란에서 검색어 가져오기
-        var query = document.getElementById("search-form").value;
-
-        // 알라딘 API 호출
-        var apiUrl = "/search-books?s=" + encodeURIComponent(query);
-
-        // AJAX를 사용하여 API 호출
-        var xhr = new XMLHttpRequest();
-        xhr.onreadystatechange = function() {
-            if (xhr.readyState === 4 && xhr.status === 200) {
-                // 결과를 받아서 출력
-                displayResults(xhr.responseText);
-            }
-        };
-        xhr.open("GET", apiUrl, true);
-        xhr.send();
-    }
-
-    function displayResults(results) {
-        // 결과를 처리하여 화면에 출력
-        var searchResultsDiv = document.getElementById("search-results");
-        searchResultsDiv.innerHTML = results;
-    }
-</script>
-</div>
-</html>
