--- a/src/main/resources/templates/rebate/rebate_seller.html
+++ b/src/main/resources/templates/rebate/rebate_seller.html
@@ -1,5 +1,6 @@
 <html layout:decorate="~{layout}">
 <head>
+    <link rel="stylesheet" type="text/css" href="/css/rebate/rebate.css"/>
     <link rel="stylesheet" type="text/css" href="/css/rebate/rebate_seller.css">
 </head>
 <div layout:fragment="content" class="container">
@@ -19,20 +20,20 @@
                 </tr>
                 </thead>
                 <tbody class="table-group-divider">
-<!--                <tr th:each="book : ${bookList}">-->
-<!--                    <th scope="row">[[${book.title}]]</th>-->
-<!--                    <td th:text="${book.price * book.discount}"> 원</td>-->
-<!--                    <td>[[${book.sellCount}]] 부</td>-->
-<!--                    <td>[[${rebate.totalFee}]] %</td>-->
-<!--                    <td th:text="${book.price * book.discount * rebate.totalFee}"> 원</td>-->
-<!--                </tr>-->
-<!--                <tr>-->
-<!--                    <th scope="row">합계</th>-->
-<!--                    <td>판매 금액 합계</td>-->
-<!--                    <td>판매 부수 합계</td>-->
-<!--                    <td>[[${rebate.totalFee}]] %</td>-->
-<!--                    <td>정산 금액 총액</td>-->
-<!--                </tr>-->
+                <!--/*<tr th:each="book : ${bookList}">*/-->
+                <!--/*<th scope="row">[[${book.title}]]</th>*/-->
+                <!--/*<td th:text="${book.price * book.discount}"> 원</td>*/-->
+                <!--/*<td>[[${book.sellCount}]] 부</td>*/-->
+                <!--/*<td>[[${rebate.totalFee}]] %</td>*/-->
+                <!--/*<td th:text="${book.price * book.discount * rebate.totalFee}"> 원</td>*/-->
+                <!--/*</tr>*/-->
+                <!--/*<tr>*/-->
+                <!--/*<th scope="row">합계</th>*/-->
+                <!--/*<td>판매 금액 합계</td>*/-->
+                <!--/*<td>판매 부수 합계</td>*/-->
+                <!--/*<td>[[${rebate.totalFee}]] %</td>*/-->
+                <!--/*<td>정산 금액 총액</td>*/-->
+                <!--/*</tr>*/-->
                 </tbody>
             </table>
 
